feat: basic editor configuration

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,8 +15,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #DCE0E8;
+    --foreground: #000000;
   }
 }
 
